Fix cases where edit cover button was behind the cover

--- a/scss/coverimage.scss
+++ b/scss/coverimage.scss
@@ -27,6 +27,7 @@
     padding: 0 15px;
     right: 0;
     width: 100%;
+    z-index: 1;
 
     label {
         color: unquote('buttontextcolour');
